# test_repository

./: README.md  docker_run_test.sh  langyi_allstart.sh  sikeda_allstart.sh
pm_v2x/src/gps_to_xyz/: CMakeLists.txt  README.MD  package.xml
pm_v2x/src/gps_to_xyz/launch/: carla.launch.py  shiche.launch.py  sikeda.launch.py
pm_v2x/src/gps_to_xyz/msg/: Asensing.msg  Chanavgnss.msg  Gnssimuinfocan.msg
pm_v2x/src/gps_to_xyz/src/: gps_listener_gpchd_node.cpp  gps_listener_node.cpp  gps_listener_rtk_node.cpp  gps_to_xyz_node.cpp  listen_gpstcp_to_udp_node.cpp  local_pose_node.cpp  obu_message_processor_node.cpp  udp_receiver_node.cpp  udp_transmitter_node.cpp
pm_v2x/src/msg_interfaces/: CMakeLists.txt  package.xml
pm_v2x/src/obu_json/: package.xml  setup.cfg  setup.py  数据.md
pm_v2x/src/obu_json/obu_json/: decode_node.py  encode_node.py  obu_handle_node.py
pm_v2x/src/position_determination/: CMakeLists.txt  package.xml  position.md
pm_v2x/src/position_determination/launch/: changjing.launch.py  send_emergency.launch.py  send_fault.launch.py
pm_v2x/src/position_determination/src/: blind_spot_warning_node.cpp  emergency_vehicles_node.cpp  fault_alarm_receiver_node.cpp  green_wave_node.cpp  intersection_collision_warning_node.cpp  receive_handle_topic_json_node.cpp  send_emergency_vehicles_node.cpp  send_fault_alarm_node.cpp  vehicle_position_node.cpp
pm_v2x/src/raw_sensor_msgs/: CMakeLists.txt
pm_v2x/src/raw_sensor_msgs/msg/: Asensing.msg  Gnssimuinfo.msg  Gnssimuinfocan.msg
ros2pkg/src/chcnav/: CMakeLists.txt
ros2pkg/src/chcnav/launch/: demo_2.xml
ros2pkg/src/chcnav/log/: latest_list
ros2pkg/src/chcnav/src/demo/: ChcnavFixDemo.cpp  RecordMsgToFile.cpp  TimeUniformityNode.cpp
ros2pkg/src/chcnav/src/hc_cgi_protocol_process_node/: HcCgiProtocolProcessNode.cpp
skd_pkg/src/chcnav_driver/: CMakeLists.txt  package.xml
skd_pkg/src/chcnav_driver/launch/: chanav_node.launch.py
skd_pkg/src/chcnav_driver/src/: chanav_node_bz.cpp
skd_pkg/src/raw_sensor_msgs/: package.xml
skd_pkg/src/raw_sensor_msgs/msg/: Chanavgnss.msg
