<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gps_to_xyz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="erlang@todo.todo">erlang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <build_depend>GeographicLib</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>serial</build_depend> -->

  <depend>msg_interfaces</depend>
  <depend>raw_sensor_msgs</depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>GeographicLib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
